[package]
name = "plaque"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio={version="1.7.0", features=["full","tracing"]}
tracing={version="0.1.31"}
tracing-subscriber={version="0.3.9", features=["env-filter"]}
tracing-tree={version="0.2.0"}
tracing-chrome={version="0.4.0"}

opentelemetry={version="0.17.0", features=['rt-tokio']}
opentelemetry-jaeger={version="0.16.0", features=['rt-tokio']}
tracing-opentelemetry={version="0.17.2"}
console-subscriber={version="0.1.3"}
axum={version="0.4.8", features = ["json"] }
tower={version="0.4.12"}
tower-http={version="0.2.5", features=["trace"]}
url={version="2.2.2"}
color-eyre = "0.6.1"
tracing-error={version="0.2.0"}
reqwest={version="0.11.9"}
feed-rs={version="1.0.0"} 
tap = "1.0.1"
serde={version="1.0.136", feature='derive'}
http-body="0.4.4"